--- a/serie.html
+++ b/serie.html
@@ -2,114 +2,154 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Series Player</title>
 <style>
-    body { margin:0; font-family: Arial,sans-serif; background:#121212; color:#fff; }
-    .player-container { max-width:1000px; margin:20px auto; padding:0 10px; }
-    h1, p { margin:0 0 10px 0; }
-    .video-wrapper { position:relative; width:100%; padding-top:56.25%; background:#000; margin-bottom:20px; }
-    iframe { position:absolute; top:0; left:0; width:100%; height:100%; border:none; }
-    .episode-list { display:flex; flex-wrap:wrap; gap:10px; margin-bottom:20px; }
-    .episode-list button { flex:1 1 calc(33.333% - 10px); padding:10px; background:#1f1f1f; border:none; color:#fff; cursor:pointer; border-radius:6px; transition:0.3s; }
-    .episode-list button.active, .episode-list button:hover { background:#ff3b3b; }
-    .controls { display:flex; justify-content:space-between; margin-bottom:20px; }
-    .controls button { padding:8px 12px; background:#ff3b3b; border:none; color:#fff; border-radius:5px; cursor:pointer; }
-    .ad-banner { width:100%; height:100px; background:#333; display:flex; justify-content:center; align-items:center; font-weight:bold; margin-bottom:20px; }
-    @media(max-width:768px){ .episode-list button{ flex:1 1 calc(50% - 10px); } }
-    @media(max-width:480px){ .episode-list button{ flex:1 1 100%; } }
+  body { font-family: Arial,sans-serif; margin:0; background:#111; color:#fff; }
+  #seriesInfo { max-width:900px; margin:20px auto; padding:10px; }
+  #seriesTitle { font-size:24px; margin-bottom:5px; }
+  #seriesDesc { font-size:16px; color:#ccc; margin-bottom:15px; }
+  #playerContainer { display:none; background:#000; padding:15px; max-width:900px; margin:0 auto 20px; border-radius:8px; }
+  #videoPlayer { width:100%; height:500px; border:none; border-radius:8px; }
+  .controls { text-align:center; margin-top:10px; }
+  .controls button { padding:8px 12px; margin:0 5px; background:#ff4444; border:none; border-radius:6px; cursor:pointer; color:#fff; }
+  #episodeList { max-width:900px; margin:0 auto 20px; display:flex; flex-wrap:wrap; gap:10px; }
+  #episodeList button { flex:1 1 30%; padding:8px; background:#222; border:none; border-radius:6px; color:#fff; cursor:pointer; }
+  #episodeList button.active, #episodeList button:hover { background:#ff3b3b; }
+  #seriesSelector { max-width:900px; margin:20px auto; display:flex; flex-wrap:wrap; gap:10px; }
+  #seriesSelector button { flex:1 1 30%; padding:8px; background:#222; border:none; border-radius:6px; color:#fff; cursor:pointer; }
+  #seriesSelector button:hover { background:#ff3b3b; }
 </style>
 </head>
 <body>
 
-<div class="player-container">
-    <h1 id="series-title"></h1>
-    <p id="series-desc"></p>
+<div id="seriesSelector"></div>
 
-    <div class="video-wrapper">
-        <iframe id="video-player" src="" allowfullscreen allow="autoplay; encrypted-media"></iframe>
-    </div>
-
-    <div class="controls">
-        <button id="prev-episode">Prev Episode</button>
-        <button id="next-episode">Next Episode</button>
-    </div>
-
-    <div class="episode-list" id="episode-list"></div>
-
-    <div class="ad-banner">Your Banner Ad Here</div>
+<div id="seriesInfo">
+  <div id="seriesTitle"></div>
+  <div id="seriesDesc"></div>
 </div>
+
+<div id="playerContainer">
+  <iframe id="videoPlayer" allowfullscreen allow="autoplay; encrypted-media"></iframe>
+  <div class="controls">
+    <button id="prevBtn" style="display:none;">Previous Episode</button>
+    <button id="nextBtn" style="display:none;">Next Episode</button>
+  </div>
+</div>
+
+<div id="episodeList"></div>
 
 <script src="series-data.js"></script>
 <script>
-    const player = document.getElementById("video-player");
-    const episodeList = document.getElementById("episode-list");
-    const seriesTitle = document.getElementById("series-title");
-    const seriesDesc = document.getElementById("series-desc");
-    let currentEpisode = 0;
+let currentSeries = null;
+let currentEpisodeIndex = 0;
+let saveInterval;
 
-    // Load series info
-    seriesTitle.textContent = seriesData.title;
-    seriesDesc.textContent = seriesData.description;
+// Populate series selector
+const selector = document.getElementById('seriesSelector');
+seriesData.forEach((series, idx) => {
+  const btn = document.createElement('button');
+  btn.textContent = series.title;
+  btn.addEventListener('click', () => loadSeries(idx));
+  selector.appendChild(btn);
+});
 
-    function loadEpisode(index) {
-        if(index < 0) index = seriesData.episodes.length - 1;
-        if(index >= seriesData.episodes.length) index = 0;
-        currentEpisode = index;
-        player.src = seriesData.episodes[index].url;
-        updateActiveButton();
-        localStorage.setItem(seriesData.title + '_currentEpisode', currentEpisode);
-    }
+// Load a series
+function loadSeries(index) {
+  currentSeries = seriesData[index];
+  currentEpisodeIndex = 0;
+  document.getElementById('seriesTitle').textContent = currentSeries.title;
+  document.getElementById('seriesDesc').textContent = currentSeries.description;
 
-    function updateActiveButton() {
-        episodeList.querySelectorAll("button").forEach((btn,i)=>{
-            btn.classList.toggle("active", i===currentEpisode);
-        });
-    }
+  populateEpisodeList();
+  loadSavedEpisode();
+  toggleNavButtons();
+}
 
-    // Populate episode buttons
-    seriesData.episodes.forEach((ep,index)=>{
-        const btn = document.createElement("button");
-        btn.textContent = ep.title;
-        btn.addEventListener("click",()=>loadEpisode(index));
-        episodeList.appendChild(btn);
+// Populate episode buttons
+function populateEpisodeList() {
+  const list = document.getElementById('episodeList');
+  list.innerHTML = '';
+  currentSeries.episodes.forEach((url, idx) => {
+    const btn = document.createElement('button');
+    btn.textContent = "Episode " + (idx+1);
+    btn.addEventListener('click', () => {
+      currentEpisodeIndex = idx;
+      playEpisode(url);
+      toggleNavButtons();
     });
+    list.appendChild(btn);
+  });
+}
 
-    // Prev/Next buttons
-    document.getElementById("prev-episode").addEventListener("click",()=>loadEpisode(currentEpisode-1));
-    document.getElementById("next-episode").addEventListener("click",()=>loadEpisode(currentEpisode+1));
+// Play episode
+function playEpisode(url, startTime=0) {
+  const player = document.getElementById('videoPlayer');
+  const container = document.getElementById('playerContainer');
 
-    // Auto resume last episode
-    const savedEpisode = localStorage.getItem(seriesData.title + '_currentEpisode');
-    loadEpisode(savedEpisode ? parseInt(savedEpisode) : 0);
+  if (url.includes("youtube.com")) {
+    let videoId = url.includes("embed") ? url.split("/embed/")[1] : new URL(url).searchParams.get("v");
+    player.src = `https://www.youtube.com/embed/${videoId}?start=${startTime}&autoplay=1&enablejsapi=1`;
+  } else if (url.includes("vimeo.com")) {
+    let parts = url.split("/");
+    let videoId = parts.pop() || parts.pop();
+    player.src = `https://player.vimeo.com/video/${videoId}#t=${startTime}s`;
+  } else if (url.includes("drive.google.com")) {
+    player.src = url;
+  } else {
+    player.src = url;
+  }
 
-    // Optional: Auto-next for YouTube and Vimeo using their APIs
-    function setupAutoNext(){
-        if(player.src.includes("youtube.com")){
-            const tag=document.createElement('script');
-            tag.src="https://www.youtube.com/iframe_api";
-            document.body.appendChild(tag);
-            window.onYouTubeIframeAPIReady=()=>{
-                new YT.Player('video-player',{
-                    events:{
-                        'onStateChange':(e)=>{
-                            if(e.data===YT.PlayerState.ENDED) loadEpisode(currentEpisode+1);
-                        }
-                    }
-                });
-            }
-        }
-        if(player.src.includes("vimeo.com")){
-            const script=document.createElement('script');
-            script.src="https://player.vimeo.com/api/player.js";
-            document.body.appendChild(script);
-            script.onload=()=>{
-                const vimeoPlayer = new Vimeo.Player(player);
-                vimeoPlayer.on('ended',()=>loadEpisode(currentEpisode+1));
-            }
-        }
-    }
-    setupAutoNext();
+  container.style.display = 'block';
+  window.scrollTo({ top: 0, behavior: 'smooth' });
+
+  updateActiveEpisode();
+  if (saveInterval) clearInterval(saveInterval);
+  saveInterval = setInterval(() => {
+    localStorage.setItem(currentSeries.title, JSON.stringify({
+      index: currentEpisodeIndex,
+      time: startTime
+    }));
+  }, 5000);
+}
+
+// Load saved episode
+function loadSavedEpisode() {
+  const saved = JSON.parse(localStorage.getItem(currentSeries.title));
+  if (saved) {
+    currentEpisodeIndex = saved.index;
+    playEpisode(currentSeries.episodes[currentEpisodeIndex], saved.time);
+  } else {
+    playEpisode(currentSeries.episodes[currentEpisodeIndex]);
+  }
+}
+
+// Next/Prev buttons
+document.getElementById('nextBtn').addEventListener('click', () => {
+  if(currentEpisodeIndex < currentSeries.episodes.length -1){
+    currentEpisodeIndex++;
+    playEpisode(currentSeries.episodes[currentEpisodeIndex]);
+    toggleNavButtons();
+  }
+});
+document.getElementById('prevBtn').addEventListener('click', () => {
+  if(currentEpisodeIndex > 0){
+    currentEpisodeIndex--;
+    playEpisode(currentSeries.episodes[currentEpisodeIndex]);
+    toggleNavButtons();
+  }
+});
+
+function toggleNavButtons() {
+  document.getElementById('nextBtn').style.display = currentEpisodeIndex < currentSeries.episodes.length - 1 ? 'inline-block' : 'none';
+  document.getElementById('prevBtn').style.display = currentEpisodeIndex > 0 ? 'inline-block' : 'none';
+}
+
+function updateActiveEpisode() {
+  document.querySelectorAll('#episodeList button').forEach((btn, idx) => {
+    btn.classList.toggle('active', idx === currentEpisodeIndex);
+  });
+}
 </script>
 
 </body>
