--- a/serie.html
+++ b/serie.html
@@ -4,20 +4,20 @@
 <meta charset="UTF-8">
 <title>Series Player</title>
 <style>
-  body { font-family: Arial,sans-serif; margin:0; background:#111; color:#fff; }
-  #seriesInfo { max-width:900px; margin:20px auto; padding:10px; }
-  #seriesTitle { font-size:24px; margin-bottom:5px; }
-  #seriesDesc { font-size:16px; color:#ccc; margin-bottom:15px; }
-  #playerContainer { display:none; background:#000; padding:15px; max-width:900px; margin:0 auto 20px; border-radius:8px; }
-  #videoPlayer { width:100%; height:500px; border:none; border-radius:8px; }
-  .controls { text-align:center; margin-top:10px; }
-  .controls button { padding:8px 12px; margin:0 5px; background:#ff4444; border:none; border-radius:6px; cursor:pointer; color:#fff; }
-  #episodeList { max-width:900px; margin:0 auto 20px; display:flex; flex-wrap:wrap; gap:10px; }
-  #episodeList button { flex:1 1 30%; padding:8px; background:#222; border:none; border-radius:6px; color:#fff; cursor:pointer; }
-  #episodeList button.active, #episodeList button:hover { background:#ff3b3b; }
-  #seriesSelector { max-width:900px; margin:20px auto; display:flex; flex-wrap:wrap; gap:10px; }
-  #seriesSelector button { flex:1 1 30%; padding:8px; background:#222; border:none; border-radius:6px; color:#fff; cursor:pointer; }
-  #seriesSelector button:hover { background:#ff3b3b; }
+body { font-family: Arial,sans-serif; margin:0; background:#111; color:#fff; }
+#seriesInfo { max-width:900px; margin:20px auto; padding:10px; }
+#seriesTitle { font-size:24px; margin-bottom:5px; }
+#seriesDesc { font-size:16px; color:#ccc; margin-bottom:15px; }
+#playerContainer { display:none; background:#000; padding:15px; max-width:900px; margin:0 auto 20px; border-radius:8px; }
+#videoPlayer { width:100%; height:500px; border:none; border-radius:8px; }
+.controls { text-align:center; margin-top:10px; }
+.controls button { padding:8px 12px; margin:0 5px; background:#ff4444; border:none; border-radius:6px; cursor:pointer; color:#fff; }
+#episodeList { max-width:900px; margin:0 auto 20px; display:flex; flex-wrap:wrap; gap:10px; }
+#episodeList button { flex:1 1 30%; padding:8px; background:#222; border:none; border-radius:6px; color:#fff; cursor:pointer; }
+#episodeList button.active, #episodeList button:hover { background:#ff3b3b; }
+#seriesSelector { max-width:900px; margin:20px auto; display:flex; flex-wrap:wrap; gap:10px; }
+#seriesSelector button { flex:1 1 30%; padding:8px; background:#222; border:none; border-radius:6px; color:#fff; cursor:pointer; }
+#seriesSelector button:hover { background:#ff3b3b; }
 </style>
 </head>
 <body>
@@ -46,13 +46,15 @@ let currentEpisodeIndex = 0;
 let saveInterval;
 
 // Populate series selector
-const selector = document.getElementById('seriesSelector');
-seriesData.forEach((series, idx) => {
-  const btn = document.createElement('button');
-  btn.textContent = series.title;
-  btn.addEventListener('click', () => loadSeries(idx));
-  selector.appendChild(btn);
-});
+function initSeriesSelector() {
+  const selector = document.getElementById('seriesSelector');
+  seriesData.forEach((series, idx) => {
+    const btn = document.createElement('button');
+    btn.textContent = series.title;
+    btn.addEventListener('click', () => loadSeries(idx));
+    selector.appendChild(btn);
+  });
+}
 
 // Load a series
 function loadSeries(index) {
@@ -87,15 +89,15 @@ function playEpisode(url, startTime=0) {
   const player = document.getElementById('videoPlayer');
   const container = document.getElementById('playerContainer');
 
-  if (url.includes("youtube.com")) {
+  if(url.includes("youtube.com")) {
     let videoId = url.includes("embed") ? url.split("/embed/")[1] : new URL(url).searchParams.get("v");
-    player.src = `https://www.youtube.com/embed/${videoId}?start=${startTime}&autoplay=1&enablejsapi=1`;
-  } else if (url.includes("vimeo.com")) {
+    player.src = `https://www.youtube.com/embed/${videoId}?autoplay=1&enablejsapi=1&start=${startTime}`;
+  } else if(url.includes("vimeo.com")) {
     let parts = url.split("/");
     let videoId = parts.pop() || parts.pop();
     player.src = `https://player.vimeo.com/video/${videoId}#t=${startTime}s`;
-  } else if (url.includes("drive.google.com")) {
-    player.src = url;
+  } else if(url.includes("drive.google.com")) {
+    player.src = url; // Only /preview links
   } else {
     player.src = url;
   }
@@ -104,7 +106,7 @@ function playEpisode(url, startTime=0) {
   window.scrollTo({ top: 0, behavior: 'smooth' });
 
   updateActiveEpisode();
-  if (saveInterval) clearInterval(saveInterval);
+  if(saveInterval) clearInterval(saveInterval);
   saveInterval = setInterval(() => {
     localStorage.setItem(currentSeries.title, JSON.stringify({
       index: currentEpisodeIndex,
@@ -116,7 +118,7 @@ function playEpisode(url, startTime=0) {
 // Load saved episode
 function loadSavedEpisode() {
   const saved = JSON.parse(localStorage.getItem(currentSeries.title));
-  if (saved) {
+  if(saved && saved.index < currentSeries.episodes.length){
     currentEpisodeIndex = saved.index;
     playEpisode(currentSeries.episodes[currentEpisodeIndex], saved.time);
   } else {
@@ -141,7 +143,7 @@ document.getElementById('prevBtn').addEventListener('click', () => {
 });
 
 function toggleNavButtons() {
-  document.getElementById('nextBtn').style.display = currentEpisodeIndex < currentSeries.episodes.length - 1 ? 'inline-block' : 'none';
+  document.getElementById('nextBtn').style.display = currentEpisodeIndex < currentSeries.episodes.length -1 ? 'inline-block' : 'none';
   document.getElementById('prevBtn').style.display = currentEpisodeIndex > 0 ? 'inline-block' : 'none';
 }
 
@@ -150,7 +152,14 @@ function updateActiveEpisode() {
     btn.classList.toggle('active', idx === currentEpisodeIndex);
   });
 }
-</script>
 
+// Initialize everything after page load
+window.addEventListener('DOMContentLoaded', () => {
+  initSeriesSelector();
+  if(seriesData.length > 0){
+    loadSeries(0); // Load first series automatically
+  }
+});
+</script>
 </body>
 </html>
